--- a/public/styles.css
+++ b/public/styles.css
@@ -418,6 +418,13 @@ a:-webkit-any-link {
     background: linear-gradient(0deg, rgba(94,94,94,1) 0%, rgba(163,163,163,1) 100%);
 
 }
+.ads:hover {
+    /* transition: .5s ease; */
+    /* background: rgba(255,255,255,0.1); */
+    /* opacity: 0.1; */
+    background: rgb(94,94,94);
+    background: linear-gradient(0deg, rgba(190,190,190,1) 0%, rgba(163,163,163,1) 100%);
+}
 
 .ads .highlight {
     background-color: orange;
