--- a/public/styles.css
+++ b/public/styles.css
@@ -296,6 +296,7 @@ a:-webkit-any-link {
     color: white;
     margin-left: 18px;
     margin-top: 10px;
+    margin-bottom: 50px;
     display: block;
     padding: 10px;
     border-radius: 15px;
@@ -558,7 +559,7 @@ a:-webkit-any-link {
     height: 300px;
     width: 300px;
     font-weight: 200;
-    font-size: 20px;
+    font-size: 15px;
     color: white;
     margin-left: 200px;
     display: block;
@@ -636,7 +637,7 @@ a:-webkit-any-link {
 
 .project-modal-info {
     margin-left: 50px;
-    margin-top: 100px;
+    margin-top: 52px;
     color: white;
     font-weight: ;
 }
@@ -646,6 +647,11 @@ a:-webkit-any-link {
     font-weight: 800;
     color: white;
     letter-spacing: 0.1em;
+    margin-bottom: 20px;
+}
+
+.project-modal-info-description {
+    width: 300px;
 }
 
 .chat-container {
